# claude_discord_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/claude_discord_bot/: bot.py  claude_client.py  config.py
tests/: test_claude_client.py
