[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-discord-bot"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "commitizen>=3.0",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.commitizen]
version = "0.2.0"
version_files = ["pyproject.toml:version"]
tag_format="v$version"
